--- a/app/platforms/ios/www/templates/editorial.html
+++ b/app/platforms/ios/www/templates/editorial.html
@@ -67,15 +67,15 @@
 			<h2 style="text-transform: uppercase; margin: 0px">{{ tab }}</h2>
 			<p>TOP 5</p>
 			<div class="product-list" ng-show="tab =='shoppings'" style="margin-bottom: 5px">
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[0]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: url('img/trofeo.svg'); background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_shopping[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_shopping[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_shopping[4].nombre }}<br> {{ visitas_shopping[4].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_shopping[0].nombre }}<br> {{ visitas_shopping[0].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">1</h2>
@@ -87,15 +87,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[1]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_shopping[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_shopping[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_shopping[3].nombre }}<br> {{ visitas_shopping[3].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_shopping[1].nombre }}<br> {{ visitas_shopping[1].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">2</h2>
@@ -107,7 +107,7 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[2]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
@@ -127,15 +127,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[3]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_shopping[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_shopping[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_shopping[1].nombre }}<br> {{ visitas_shopping[1].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_shopping[3].nombre }}<br> {{ visitas_shopping[3].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">4</h2>
@@ -147,15 +147,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[4]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_shopping[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_shopping[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_shopping[0].nombre }}<br> {{ visitas_shopping[0].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_shopping[4].nombre }}<br> {{ visitas_shopping[4].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">5</h2>
@@ -169,15 +169,15 @@
 				</div>
 			</div>
 			<div class="product-list" ng-show="tab =='multitiendas'" style="margin-bottom: 5px">
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[0]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: url('img/trofeo.svg'); background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_multimarcas[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_multimarcas[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_multimarcas[4].nombre }}<br> {{ visitas_multimarcas[4].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_multimarcas[0].nombre }}<br> {{ visitas_multimarcas[0].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">1</h2>
@@ -189,15 +189,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[1]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_multimarcas[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_multimarcas[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_multimarcas[3].nombre }}<br> {{ visitas_multimarcas[3].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_multimarcas[1].nombre }}<br> {{ visitas_multimarcas[1].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">2</h2>
@@ -209,7 +209,7 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[2]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
@@ -229,15 +229,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[3]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_multimarcas[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_multimarcas[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_multimarcas[1].nombre }}<br> {{ visitas_multimarcas[1].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_multimarcas[3].nombre }}<br> {{ visitas_multimarcas[3].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">4</h2>
@@ -249,15 +249,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_multimarcas[4]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_multimarcas[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_multimarcas[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_multimarcas[0].nombre }}<br> {{ visitas_multimarcas[0].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_multimarcas[4].nombre }}<br> {{ visitas_multimarcas[4].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">5</h2>
@@ -271,15 +271,15 @@
 				</div>
 			</div>
 			<div class="product-list" ng-show="tab =='supermercados'" style="margin-bottom: 5px">
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_supermercados[0]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: url('img/trofeo.svg'); background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_supermercados[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_supermercados[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_supermercados[4].nombre }}<br> {{ visitas_supermercados[4].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_supermercados[0].nombre }}<br> {{ visitas_supermercados[0].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">1</h2>
@@ -291,15 +291,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_supermercados[1]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_supermercados[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_supermercados[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_supermercados[3].nombre }}<br> {{ visitas_supermercados[3].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_supermercados[1].nombre }}<br> {{ visitas_supermercados[1].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">2</h2>
@@ -311,7 +311,7 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_supermercados[2]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
@@ -331,15 +331,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_supermercados[3]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_supermercados[1].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_supermercados[3].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_supermercados[1].nombre }}<br> {{ visitas_supermercados[1].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_supermercados[3].nombre }}<br> {{ visitas_supermercados[3].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">4</h2>
@@ -351,15 +351,15 @@
 					      	</div>
 					  	</div>
 				</div>
-				<div class="card" style="background-color: #f5f5f5">
+				<div ng-show="visitas_supermercados[4]" class="card" style="background-color: #f5f5f5">
 					  	<div class="item item-divider"  style="background-image: none; background-position: right; background-repeat: no-repeat; background-size: contain; padding: 0px !important; background-color: white">
 					      	<div class="row">
 					          	<div class="col text-left">
 								      <ion-item class="item-thumbnail-left" style="background-color: transparent !important;padding-left: 80px; padding: 0px; min-height: 50px; animation: superScaleIn 0.75s linear">
-						              	<img src="{{ visitas_supermercados[0].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
+						              	<img src="{{ visitas_supermercados[4].icono || 'img/dezling-logo.png' }}" style="height: 40px !important; width: auto">
 						              	<div class="row">
 						              		<div class="col col-60 col-offset-20">
-						              			<p class="text-center">{{ visitas_supermercados[0].nombre }}<br> {{ visitas_supermercados[0].visitas }} visitas</p>
+						              			<p class="text-center">{{ visitas_supermercados[4].nombre }}<br> {{ visitas_supermercados[4].visitas }} visitas</p>
 						              		</div>
 						              		<div class="col col-20">
 								        		<h2 class="text-right">5</h2>
