--- a/app/www/templates/multimarcas/detalle_multimarcas_locales.html
+++ b/app/www/templates/multimarcas/detalle_multimarcas_locales.html
@@ -21,7 +21,7 @@
 							      	<div class="row">
 							          	<div class="col text-left">
 										      	<ion-item class="item-thumbnail-left item-text-wrap" style="background-color: transparent !important;padding-left: 95px; top: -10px !important; left: 0px !important;">
-								              		<img src="{{ shopping.perfil.icono || 'img/dezling-logo.png' }}" width="auto" height="70px" style="top: 0px; left: ">
+								              		<img src="{{ shopping.perfil.icono || 'img/dezling-logo.png' }}" width="auto" height="70px" style="top: 20%;">
 										        	<h2 class="text-right">{{ local.perfil.nombre }}</h2>
 										      	</ion-item>
 							          	</div>
